syntax = "proto3";

package wayplatform.connect.tachograph.dd.v1;

import "wayplatform/connect/tachograph/dd/v1/full_card_number_and_generation.proto";
import "wayplatform/connect/tachograph/dd/v1/place_auth_record.proto";

// VuPlaceDailyWorkPeriodRecordG2V2 represents a VU Place Daily Work Period record (Generation 2, version 2).
//
// This data type stores information about a place where a driver begins or ends
// a daily work period in a Generation 2 version 2 vehicle unit.
//
// Data Dictionary Reference: Section 2.219 (Generation 2, version 2)
//
// Binary Size: 42 bytes
//
// ASN.1 Definition (Gen2 V2):
//
//   VuPlaceDailyWorkPeriodRecord ::= SEQUENCE {
//       fullCardNumberAndGeneration FullCardNumberAndGeneration,    -- 20 bytes
//       placeAuthRecord             PlaceAuthRecord                 -- 22 bytes
//   }
//
// Generation Differences:
// - Gen1: Uses FullCardNumber (18 bytes) and PlaceRecord (10 bytes) = 28 bytes
// - Gen2v1: Uses FullCardNumberAndGeneration (20 bytes) and PlaceRecordG2 (21 bytes) = 41 bytes
// - Gen2v2: Uses FullCardNumberAndGeneration (20 bytes) and PlaceAuthRecord (22 bytes) = 42 bytes
message VuPlaceDailyWorkPeriodRecordG2V2 {
  // Card type, issuing Member State, card number and generation
  FullCardNumberAndGeneration full_card_number = 1;

  // Information related to the place entered with GNSS authentication (Gen2v2)
  PlaceAuthRecord place_auth_record = 2;

  // Raw binary data for round-trip fidelity (42 bytes)
  bytes raw_data = 3;
}
